--- a/i18n/en.json
+++ b/i18n/en.json
@@ -4,9 +4,8 @@
 	},
 	"donation": "Donation",
 	"donation-desc": "A donation form",
-	"donation-title": "Thank you for donating!",
-	"donation-msg": "<p>$1, תודה על תמיכתך בכל-זכות!</p><p>אני רוצה להודות לך על תרומתך בסך $3&lrm;$4. התרומה תאפשר לנו לשמור על המידע באתר עדכני ולהוסיף עליו עוד, כדי לשרת את כלל הציבור עם מידע מקיף ומהימן, שיעזור לכמה שיותר מאיתנו לקבל את מה שמגיע להם.</p><p>שוב, תודה לך על תמיכתך!</p><p>בהערכה רבה,<br>אמתי קורן<br>מנכ\"ל כל-זכות</p><br><p>נ.ב. [[זיכוי ממס הכנסה בשל תרומה (סעיף 46)|הידעת שתרומה לכל-זכות ניתנת לזיכוי במס הכנסה?]] ברגעים אלו נשלחת אליך בדוא\"ל קבלה דיגיטלית.</p>",
-	"donation-msg-nameless": "<p>תודה על תמיכתך בכל-זכות!</p><p>אני רוצה להודות לך על תרומתך בסך $3&lrm;$4. התרומה תאפשר לנו לשמור על המידע באתר עדכני ולהוסיף עליו עוד, כדי לשרת את כלל הציבור עם מידע מקיף ומהימן, שיעזור לכמה שיותר מאיתנו לקבל את מה שמגיע להם.</p><p>שוב, תודה לך על תמיכתך!</p><p>בהערכה רבה,<br>אמתי קורן<br>מנכ\"ל כל-זכות</p><br><p>נ.ב. [[זיכוי ממס הכנסה בשל תרומה (סעיף 46)|הידעת שתרומה לכל-זכות ניתנת לזיכוי במס הכנסה?]] ברגעים אלו נשלחת אליך בדוא\"ל קבלה דיגיטלית.</p>",
+	"donation-title": "Donation",
+	"donation-thank-you": "<p>$1, תודה על תמיכתך בכל-זכות!</p><p>אני רוצה להודות לך על תרומתך בסך $3&lrm;$4. התרומה תאפשר לנו לשמור על המידע באתר עדכני ולהוסיף עליו עוד, כדי לשרת את כלל הציבור עם מידע מקיף ומהימן, שיעזור לכמה שיותר מאיתנו לקבל את מה שמגיע להם.</p><p>שוב, תודה לך על תמיכתך!</p><p>בהערכה רבה,<br>אמתי קורן<br>מנכ\"ל כל-זכות</p><br><p>נ.ב. [[זיכוי ממס הכנסה בשל תרומה (סעיף 46)|הידעת שתרומה לכל-זכות ניתנת לזיכוי במס הכנסה?]] ברגעים אלו נשלחת אליך בדוא\"ל קבלה דיגיטלית.</p>",
 	"donation-freq-once": "once",
 	"donation-freq-monthly": "monthly",
 	"donation-freq-annually": "annually"
