Change some texts

--- a/i18n/he.json
+++ b/i18n/he.json
@@ -3,7 +3,7 @@
 		"authors": [
 		]
 	},
-	"donation": "תרומה",
+	"donation": "תרומה לכל זכות",
 	"donation-desc": "עמוד תודה לתרומות",
 	"donation-thank-you": "$3, תודה שתרמת $1$2!",
 	"donation-title": "תרומה",
