Add "name" field and validate email

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -11,6 +11,7 @@
 	"donation-newsletter-subscribe": "Subscribe to our newsletter",
 	"donation-email": "Email",
 	"donation-cc-holder-id": "ID number",
+	"donation-cc-holder-name": "Name",
 	"donation-cc-cvv": "CVV",
 	"donation-cc-expiry-date": "Expiry",
 	"donation-cc-number": "Credit card number",
