--- a/i18n/he.json
+++ b/i18n/he.json
@@ -11,6 +11,7 @@
 	"donation-newsletter-subscribe": "מעוניין להירשם לניוזלטר",
 	"donation-email": "דואר אלקטרוני",
 	"donation-cc-holder-id": "מס' תעודת זהות",
+	"donation-cc-holder-name": "שם מלא",
 	"donation-cc-cvv": "CVV",
 	"donation-cc-expiry-date": "תוקף",
 	"donation-cc-number": "מס' כרטיס אשראי",
