--- a/i18n/en.json
+++ b/i18n/en.json
@@ -5,8 +5,10 @@
 	"donation": "Donate to Kol-Zchut",
 	"donation-desc": "A donation form",
 	"donation-title": "Donation",
-	"donation-thank-you": "<p>$1, תודה על תמיכתך בכל-זכות!</p><p>אני רוצה להודות לך על תרומתך בסך $3&lrm;$4. התרומה תאפשר לנו לשמור על המידע באתר עדכני ולהוסיף עליו עוד, כדי לשרת את כלל הציבור עם מידע מקיף ומהימן, שיעזור לכמה שיותר מאיתנו לקבל את מה שמגיע להם.</p><p>שוב, תודה לך על תמיכתך!</p><p>בהערכה רבה,<br>אמתי קורן<br>מנכ\"ל כל-זכות</p><br><p>נ.ב. [[זיכוי ממס הכנסה בשל תרומה (סעיף 46)|הידעת שתרומה לכל-זכות ניתנת לזיכוי במס הכנסה?]] ברגעים אלו נשלחת אליך בדוא\"ל קבלה דיגיטלית.</p>",
-
+	"donation-thank-you": "<p>$1, תודה על תמיכתך בכל זכות!</p><p>אני רוצה להודות לך על תרומתך בסך $3&lrm;$4. התרומה תאפשר לנו לשמור על המידע באתר עדכני ולהוסיף עליו עוד, כדי לשרת את כלל הציבור עם מידע מקיף ומהימן, שיעזור לכמה שיותר מאיתנו לקבל את מה שמגיע להם.</p><p>שוב, תודה לך על תמיכתך!</p><p>בהערכה רבה,<br>אמתי קורן<br>מנכ\"ל כל זכות</p><br><p>נ.ב. [[זיכוי ממס הכנסה בשל תרומה (סעיף 46)|הידעת שתרומה לכל-זכות ניתנת לזיכוי במס הכנסה?]] ברגעים אלו נשלחת אליך בדוא\"ל קבלה דיגיטלית.</p>",
+	"donation-modal-title": "Donate to Kol-Zchut",
+	"donation-modal-close-btn": "Close",
+	"donation-input-required": "Required",
 	"donation-btn-text": "Donate <span class=\"currency-sign\">$2</span><span class=\"btn-amount\">$1</span>",
 	"donation-newsletter-subscribe": "Subscribe to our newsletter",
 	"donation-email": "Email",
