--- a/i18n/he.json
+++ b/i18n/he.json
@@ -6,9 +6,11 @@
 	"donation": "תרומה לכל זכות",
 	"donation-desc": "עמוד תודה לתרומות",
 	"donation-title": "תרומה",
-
+	"donation-modal-title": "תרומה לכל זכות",
+	"donation-modal-close-btn": "סגירה",
+	"donation-input-required": "שדה חובה",
 	"donation-btn-text": "לתרומת <span class=\"currency-sign\">$2</span><span class=\"btn-amount\">$1</span>",
-	"donation-newsletter-subscribe": "מעוניין להירשם לניוזלטר",
+	"donation-newsletter-subscribe": "רוצה להירשם לניוזלטר",
 	"donation-email": "דואר אלקטרוני",
 	"donation-cc-holder-id": "מס' תעודת זהות",
 	"donation-cc-holder-name": "שם מלא",
@@ -19,5 +21,5 @@
 	"donation-freq-once": "חד-פעמית",
 	"donation-freq-monthly": "מדי חודש",
 	"donation-freq-annually": "מדי שנה",
-	"donation-thank-you": "$3, תודה שתרמת $1$2!"
+	"donation-thank-you": "<p>$1, תודה על תמיכתך בכל זכות!</p><p>אני רוצה להודות לך על תרומתך בסך $2$3. התרומה תאפשר לנו לשמור על המידע באתר עדכני ולהוסיף עליו עוד, כדי לשרת את כלל הציבור עם מידע מקיף ומהימן, שיעזור לכמה שיותר מאיתנו לקבל את מה שמגיע להם.</p><p>שוב, תודה לך על תמיכתך!</p>\n\n<p><div>בהערכה רבה,</div><div>אמתי קורן</div><div>מנכ\"ל כל זכות</div></p><p>נ.ב. [[זיכוי ממס הכנסה בשל תרומה (סעיף 46)|הידעת שתרומה לכל-זכות ניתנת לזיכוי במס הכנסה?]] ברגעים אלו נשלחת אליך בדוא\"ל קבלה דיגיטלית.</p>"
 }
