--- a/i18n/he.json
+++ b/i18n/he.json
@@ -24,5 +24,6 @@
 	"donation-thank-you": "<p>$1, תודה על תמיכתך בכל זכות!</p><p>אני רוצה להודות לך על תרומתך בסך $2 $3. התרומה תאפשר לנו לשמור על המידע באתר עדכני ולהוסיף עליו עוד, כדי לשרת את כלל הציבור עם מידע מקיף ומהימן, שיעזור לכמה שיותר מאיתנו לקבל את מה שמגיע להם.</p><p>שוב, תודה לך על תמיכתך!</p>\n\n<p><div>בהערכה רבה,</div><div>אמתי קורן</div><div>מנכ\"ל כל זכות</div></p><p>נ.ב. [[זיכוי ממס הכנסה בשל תרומה (סעיף 46)|הידעת שתרומה לכל-זכות ניתנת לזיכוי במס הכנסה?]] ברגעים אלו נשלחת אליך בדוא\"ל קבלה דיגיטלית.</p>",
 	"donation-newsletter-sub-fail": "מצטערים, ההרשמה לניוזלטר נכשלה מסיבה לא ידועה. נשמח אם תנסו להירשם מאוחר יותר באמצעות הטופס באתר.",
 	"donation-newsletter-sub-already-subscribed": "כבר נרשמתם לניוזלטר בעבר - תודה!",
-	"donation-newsletter-sub-success": "רשמנו אתכם לניוזלטר שלנו. אנחנו שמחים שהצטרפתם!"
+	"donation-newsletter-sub-success": "רשמנו אתכם לניוזלטר שלנו. אנחנו שמחים שהצטרפתם!",
+	"donation-loading": "רק שניה, הטופס נטען..."
 }
