Update the modal title text

--- a/i18n/he.json
+++ b/i18n/he.json
@@ -6,7 +6,7 @@
 	"donation": "תרומה לכל זכות",
 	"donation-desc": "עמוד תודה לתרומות",
 	"donation-title": "תרומה",
-	"donation-modal-title": "תרומה לכל זכות",
+	"donation-modal-title": "תרומה מאובטחת לכל זכות",
 	"donation-modal-close-btn": "סגירה",
 	"donation-input-required": "שדה חובה",
 	"donation-btn-text": "לתרומת <span class=\"currency-sign\">$2</span><span class=\"btn-amount\">$1</span>",
