Update the thank you message

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -5,7 +5,7 @@
 	"donation": "Donate to Kol-Zchut",
 	"donation-desc": "A donation form",
 	"donation-title": "Donation",
-	"donation-thank-you": "<p>$1, תודה על תמיכתך בכל זכות!</p><p>אני רוצה להודות לך על תרומתך בסך $2 $3. התרומה תאפשר לנו לשמור על המידע באתר עדכני ולהוסיף עליו עוד, כדי לשרת את כלל הציבור עם מידע מקיף ומהימן, שיעזור לכמה שיותר מאיתנו לקבל את מה שמגיע להם.</p><p>שוב, תודה לך על תמיכתך!</p>\n\n<p><div>בהערכה רבה,</div><div>אמתי קורן</div><div>מנכ\"ל כל זכות</div></p><p>נ.ב. [[זיכוי ממס הכנסה בשל תרומה (סעיף 46)|הידעת שתרומה לכל-זכות ניתנת לזיכוי במס הכנסה?]] ברגעים אלו נשלחת אליך בדוא\"ל קבלה דיגיטלית.</p>",
+	"donation-thank-you": "<p>$1, תודה על תמיכתך בכל זכות!</p><p>אנו מודים לך על תרומתך בסך $2 $3. התרומה תאפשר לנו לשמור על המידע באתר עדכני ולהוסיף עליו עוד, כדי לשרת את כלל הציבור עם מידע מקיף ומהימן, שיעזור לכמה שיותר מאתנו לקבל את מה שמגיע להם.</p>\n\n<p><div>בהערכה רבה,</div><div>צוות כל זכות</div></p><p>נ.ב. ברגעים אלו נשלחת אליך בדוא\"ל קבלה דיגיטלית.</p>",
 	"donation-modal-title": "Donate to Kol-Zchut",
 	"donation-modal-close-btn": "Close",
 	"donation-input-required": "Required",
