Add config for suggested/default/max/min amounts
This (hopefully) covers all the edge cases created by allowing this.

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -10,7 +10,8 @@
 	"donation-modal-title": "Donate to Kol-Zchut",
 	"donation-modal-close-btn": "Close",
 	"donation-input-required": "Required",
-	"donation-btn-text": "Donate <span class=\"currency-sign\">$2</span><span class=\"btn-amount\">$1</span>",
+	"donation-btn": "Donate",
+	"donation-btn-with-amount": "Donate <span class=\"currency-sign\">$2</span><span class=\"btn-amount\">$1</span>",
 	"donation-newsletter-subscribe": "Subscribe to our newsletter",
 	"donation-email": "Email",
 	"donation-cc-holder-id": "ID number",
