--- a/i18n/he.json
+++ b/i18n/he.json
@@ -10,7 +10,8 @@
 	"donation-modal-title": "תרומה מאובטחת לכל זכות",
 	"donation-modal-close-btn": "סגירה",
 	"donation-input-required": "שדה חובה",
-	"donation-btn-text": "לתרומת <span class=\"currency-sign\">$2</span><span class=\"btn-amount\">$1</span>",
+	"donation-btn": "לתרומה",
+	"donation-btn-with-amount": "לתרומת <span class=\"currency-sign\">$2</span><span class=\"btn-amount\">$1</span>",
 	"donation-newsletter-subscribe": "רוצה להירשם לניוזלטר",
 	"donation-email": "דואר אלקטרוני",
 	"donation-cc-holder-id": "מס' תעודת זהות",
