Add a subtitle to the modal header

--- a/i18n/he.json
+++ b/i18n/he.json
@@ -7,7 +7,8 @@
 	"donation-desc": "עמוד תודה לתרומות",
 	"donation-title": "תרומה",
 	"donation-charge-failed": "העסקה לא עברה. אנא בדקו את פרטי האשראי ונסו שנית.",
-	"donation-modal-title": "תרומה מאובטחת לכל זכות",
+	"donation-modal-title": "תרמו להמשך הפעילות של כל זכות",
+	"donation-modal-subtitle": "כל זכות הוא מלכ\"ר שמשרת מיליוני ישראלים בחינם וללא כוונת רווח. אנחנו זקוקים לתרומתכם כדי להמשיך ולפעול. התרומה מוכרת לצרכי זיכוי ממס לפי סעיף 46",
 	"donation-modal-close-btn": "סגירה",
 	"donation-input-required": "שדה חובה",
 	"donation-btn": "לתרומה",
