--- a/i18n/he.json
+++ b/i18n/he.json
@@ -15,7 +15,7 @@
 	"donation-btn-with-amount": "לתרומת <span class=\"currency-sign\">$2</span><span class=\"btn-amount\">$1</span>",
 	"donation-newsletter-subscribe": "רוצה להירשם לניוזלטר",
 	"donation-email": "דואר אלקטרוני",
-	"donation-cc-holder-id": "מס' תעודת זהות",
+	"donation-cc-holder-id": "תעודת זהות",
 	"donation-cc-holder-name": "שם מלא",
 	"donation-cc-cvv": "CVV",
 	"donation-cc-cvv-tooltip": "שלוש הספרות בגב הכרטיס",
